code style commit

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Merriweather:400,400i,700");
 
 :root {
-    --gradTop: hsl(144, 100%, 89%);
-    --gradBottom: hsl(42, 94%, 76%);
+    --gradTopLight: hsl(144, 100%, 89%);
+    --gradBottomLight: hsl(42, 94%, 76%);
 
-    --gradDark: hsl(198, 44%, 11%);
-    --gradLight: hsl(198, 39%, 29%);
+    --gradTopDark: hsl(198, 44%, 11%);
+    --gradBottomLight: hsl(198, 39%, 29%);
 
     --textSmall: 20px;
     --textMedium: 32px;
@@ -17,7 +17,7 @@ body {
 }
 
 main {
-    background: linear-gradient(to bottom, var(--gradTop), var(--gradBottom));
+    background: linear-gradient(to bottom, var(--gradTopLight), var(--gradBottomLight));
 }
 
 /* --------------------------------- header --------------------------------- */
@@ -136,7 +136,6 @@ main {
 
 .project-link {
    margin-top: 60px;
-
 }
 
 .project-link-img {
