--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Merriweather:400,400i,700");
 
+/* --------------------------------- variables --------------------------------- */
+
 :root {
     --gradTopLight: hsl(144, 100%, 89%);
     --gradBottomLight: hsl(42, 94%, 76%);
@@ -7,14 +9,22 @@
     --gradTopDark: hsl(198, 44%, 11%);
     --gradBottomDark: hsl(198, 39%, 29%);
 
+    --white: hsl(0, 100%, 99%);
+    --grey: hsl(0, 0%, 33%);
+    --greyShadow: hsla(0, 0%, 33%, 0.48);
+
     --textSmall: 20px;
     --textMedium: 32px;
     --textLarge: 46px;
 }
 
+/* --------------------------------- body --------------------------------- */
+
 body {
     font-family: Merriweather, serif;
 }
+
+/* --------------------------------- main --------------------------------- */
 
 main {
     background: linear-gradient(to bottom, var(--gradTopLight), var(--gradBottomLight));
@@ -27,8 +37,9 @@ main {
     height: 90px;
     display: flex;
     justify-content: space-between;
-    background-color: white;
+    background-color: var(--white);
     width: 100%;
+    z-index: 1000;
 }
 
 .header-block-left {
@@ -43,6 +54,13 @@ main {
     margin-left: 40px;
     margin-right: 40px;
     font-size: var(--textSmall);
+}
+
+.header-decoration {
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border: 1px solid var(--grey);
+    box-shadow: 0 5px 14px -2px var(--greyShadow);
 }
 
 /* --------------------------------- intro --------------------------------- */
@@ -79,13 +97,6 @@ main {
     width: fit-content;
 }
 
-.intro-social-img {
-    width: 20px;
-    height: 20px;
-    margin-right: 15px;
-    margin-left: 15px;
-}
-
 .intro-scroll-container {
     position: absolute;
     bottom: 0;
@@ -104,13 +115,14 @@ main {
     animation-name: bounce;
     animation-timing-function: ease;
     transform-origin: bottom;
+    transform: translate(-50%, 0);
 }
 
 @keyframes bounce {
-    0%   { transform: translate( -50%, 50%); }
+    0%   { transform: translate(-50%, 0); }
     20%  { transform: translate(-50%, -30px); }
-    50%  { transform: translate( -50%, 50%); }
-    100% { transform: translate( -50%, 50%); }
+    50%  { transform: translate(-50%, 0); }
+    100% { transform: translate(-50%, 0); }
 }
 
 /* --------------------------------- about me --------------------------------- */
@@ -120,11 +132,78 @@ main {
 }
 
 .about-me-field {
-    background-color: white;
+    background-color: var(--white);
     padding: 40px;
 }
 
 .about-me-text {
+    font-size: var(--textSmall);
+}
+
+/* --------------------------------- timeline --------------------------------- */
+
+.timeline-cards {
+    padding-bottom: 200px;
+}
+
+.timeline-cards:before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    height: 323%;
+    width: 4px;
+    background: var(--grey);
+    margin-left: -2px;
+}
+
+.timeline-card-container {
+    padding-top: 50px;
+}
+
+.timeline-img-item {
+    width: fit-content;
+    display: flex;
+    margin: 0 auto;
+}
+
+.timeline-img-item-decor {
+    height: 60px;
+    width: 60px;
+    background-color: var(--gradTopLight);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100px !important;
+    z-index: 1;
+}
+
+.timeline-img {
+    width: 30px;
+    height: 30px;
+}
+
+.timeline-card {
+    background-color: var(--white);
+    width: 600px;
+    margin-top: -60px;
+    padding: 40px;
+}
+
+.timeline-card-left {
+    margin-left: 40px;
+    margin-right: auto;
+}
+
+.timeline-card-right {
+    margin-right: 40px;
+    margin-left: auto;
+}
+
+.timeline-title-text {
+    font-size: var(--textMedium);
+}
+
+.timeline-description-text {
     font-size: var(--textSmall);
 }
 
@@ -141,7 +220,7 @@ main {
 
 .card {
     width: 350px;
-    background-color: white;
+    background-color: var(--white);
     padding: 40px 40px 72px;
 }
 
@@ -171,11 +250,36 @@ main {
     margin-right: 10px;
 }
 
+/* --------------------------------- footer --------------------------------- */
+
+.footer-container {
+    background-color: var(--white);
+    padding-left: 40px;
+    padding-right: 40px;
+    display: flex;
+    align-items: center;
+}
+
+.footer-contact-me-text {
+    font-size: var(--textSmall);
+    margin-right: 30px;
+}
+
+.footer-decoration {
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    border: 1px solid var(--grey);
+}
+
 /* --------------------------------- mixins --------------------------------- */
 
 .text-decoration-remover {
     text-decoration: none;
     cursor: pointer;
+}
+
+.text-decoration-underline:hover {
+    text-decoration: underline;
 }
 
 .text-decoration-remover:visited, .text-decoration-remover:hover, .text-decoration-remover:active {
@@ -191,4 +295,17 @@ main {
     font-size: var(--textSmall);
     line-height: var(--textMedium);
     margin-bottom: 10px;
+}
+
+.card-decoration {
+    border-radius: 5px;
+    border: 1px solid var(--grey);
+    box-shadow: 5px 5px 14px -2px var(--greyShadow);
+}
+
+.social-img {
+    width: 20px;
+    height: 20px;
+    margin-right: 15px;
+    margin-left: 15px;
 }
