--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,8 @@ body {
     --contrastBackground: hsl(0, 100%, 99%);
     --border: hsl(0, 0%, 33%);
     --borderShadow: hsla(0, 0%, 33%, 0.48);
-    --textColor: black;
+    --textColor: hsl(0, 0%, 0%);
+    --codeBackground: hsla(210, 12.9%, 12.2%, 0.05);
 }
 
 .theme-dark {
@@ -29,7 +30,8 @@ body {
     --contrastBackground: rgb(182, 215, 228);
     --border: hsl(180, 4%, 43%);
     --borderShadow: hsla(0, 0%, 89%, 0.48);
-    --textColor: white;
+    --textColor: hsl(0, 0%, 100%);;
+    --codeBackground: hsla(210, 12.9%, 12.2%, 0.05);
 }
 
 /* --------------------------------- main --------------------------------- */
@@ -190,7 +192,7 @@ button {
     content: "";
     position: absolute;
     left: 50%;
-    height: 323%;
+    height: 550%;
     width: 4px;
     background: var(--border);
     margin-left: -2px;
@@ -306,6 +308,11 @@ button {
 
 .timeline-description-text {
     font-size: var(--textSmall);
+    line-height: 1.5;
+}
+
+.timeline-description-text-listed {
+    line-height: 1.5;
 }
 
 /* --------------------------------- portfolio --------------------------------- */
@@ -346,8 +353,6 @@ button {
 }
 
 .project-link-img {
-    width: 14px;
-    height: 14px;
     margin-right: 10px;
 }
 
@@ -383,6 +388,10 @@ button {
     text-decoration: underline;
 }
 
+.text-decoration-nav-onsite {
+    text-decoration: underline;
+}
+
 .text-decoration-remover:visited, .text-decoration-remover:hover, .text-decoration-remover:active {
     color: inherit;
 }
@@ -410,4 +419,21 @@ button {
     height: 20px;
     margin-right: 15px;
     margin-left: 15px;
+}
+
+.external-link-img {
+    width: 14px;
+    height: 14px;
+}
+
+.external-link-img-decor {
+    margin-left: 10px;
+}
+
+.code-text {
+    background-color: var(--codeBackground);
+    border-radius: 6px;
+    font-weight: 600;
+    line-height: 1.25;
+    padding: 4px 8px;
 }
